clusters/homelab/bootstrap/argocd-simple/patch-argocd-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
